# convectio

./: README.md  pyproject.toml  test.ipynb
src/convectio/: __init__.py
src/convectio/error_flags/: flagapp.py
src/convectio/math_extensions/: __init__.py  center_differencing.py
src/convectio/spatial_extensions/: longify.py
src/convectio/transect/: transect.py
src/mesopy/: __init__.py
src/mesopy/error_flags/: apply_flags.py
src/mesopy/math_extensions/: center_differencing.py
src/mesopy/spatial_extensions/: longify.py
src/mesopy/transect/: transect.py
src/mmesopy/: __init__.py  custom_math.py
src/mmesopy/spatial_extensions/: longify.py
src/mmesopy/transect/: transect.py
testing/: test.ipynb
