[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "convectio"
version = "0.0.2"
description = "A Python package for handling mobile mesonet data from UNL and CMich CoMeT platforms."
requires-python = ">=3.8"
dependencies = [
    "pandas>=1.0",
    "numpy>=1.20",
    "matplotlib>=3.3",
    "xarray>=2025.9.0",
    "netCDF4>=1.7.2",
    "geopy>=2.4.0",
    "metpy>=1.7"
     ]
